# Bean

./: .coverage  .gitignore  README.md  app.py  debug_schema.py  master_plan.md  master_template.docx  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: auditor.py  critic.py  ghostwriter.py  llm.py  renderer.py  templates.py
models/: schemas.py
scripts/: create_template.py
tests/: __init__.py  conftest.py  test_auditor.py  test_core.py  test_critic.py  test_ghostwriter.py  test_handlers.py  test_llm.py  test_models.py  test_renderer.py  test_schema_cleaning.py  test_security.py  test_templates.py  verify_template_upgrade.py
ui/: components.py  handlers.py
utils/: constants.json  parsing.py
